--- a/action.yml
+++ b/action.yml
@@ -13,9 +13,14 @@ inputs:
   organization:
     description: "The organization of the Yocto meta repository."
     required: true
-    default: "hestiia-engineering"
   recipe_path:
     description: "The path to the folder in the Yocto meta repository where the recipe is located."
+    required: true
+  author:
+    description: "The author of the pull request."
+    required: true
+  committer:
+    description: "The committer of the pull request."
     required: true
 runs:
   using: "composite"
@@ -79,5 +84,5 @@ runs:
         body: "Automatically generated update for ${{ env.PACKAGE_TITLE }} BitBake recipe based on release ${{ env.PACKAGE_VERSION }}."
         base: ${{ inputs.yocto_branch }}
         path: ${{ inputs.yocto_repository }}
-        committer: yocto-action[bot] <it@hestiia.com>
-        author: yocto-action[bot] <it@hestiia.com>
+        committer: ${{ inputs.committer }}
+        author: ${{ inputs.author }}
