fix bitbake file generation using cat

--- a/action.yml
+++ b/action.yml
@@ -69,15 +69,15 @@ runs:
     - name: Generate BitBake file
       if: inputs.method == 'meta-rust-bin'
       run: |
-        cat >> ${{ env.PACKAGE_NAME }}_${{ env.PACKAGE_VERSION }}.bb <<EOF
+        cat > ${{ env.PACKAGE_NAME }}_${{ env.PACKAGE_VERSION }}.bb <<-EOF
           inherit cargo_bin
 
           do_compile[network] = "1"
 
-          SRC_URI += "git://github.com/${{ env.GITHUB_REPOSITORY }}.git;protocol=https;nobranch=1;branch=${{ env.GITHUB_BASE_REF }}"
-          SRCREV = "${{ env.GITHUB_SHA }}"
-          S = "${WORKDIR}/git"
-          CARGO_HOME = "${S}/.cargo"
+          SRC_URI += "git://github.com/${{ github.repository }}.git;protocol=https;nobranch=1;branch=${{ github.base_ref }}"
+          SRCREV = "${{ github.sha }}"
+          S = "\${WORKDIR}/git"
+          CARGO_HOME = "\${S}/.cargo"
           LICENSE="CLOSED"
 
           include ${{ env.PACKAGE_NAME }}.inc
