--- a/action.yml
+++ b/action.yml
@@ -74,7 +74,7 @@ runs:
 
           do_compile[network] = "1"
 
-          SRC_URI += "git://github.com/${{ github.repository }}.git;protocol=https;nobranch=1;branch=${{ github.base_ref }}"
+          SRC_URI += "git://github.com/${{ github.repository }}.git;protocol=https;nobranch=1;branch=${{ github.ref_name }}"
           SRCREV = "${{ github.sha }}"
           S = "\${WORKDIR}/git"
           CARGO_HOME = "\${S}/.cargo"
